# mima-vault

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  components.json  index.html  locales.csv  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: build-all.sh  generate-locales.mjs  sync-csv.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  meta_db.rs
src/components/app/: app-settings.tsx  entry-dialog.tsx  lang-switcher.tsx  list-card.tsx  recycle-bin.tsx  sortable-card-item.tsx  sortable-card-list.tsx  unlock.tsx  use-auto-lock.ts  vault-card.tsx  vault-list.tsx  vault-settings-dialog.tsx  vault.tsx  wave-background.tsx  window-controls.tsx
src/components/ui/: animated-modal.tsx  background-beams-with-collision.tsx  button.tsx  card-hover-effect.tsx  card-spotlight.tsx  close-button.tsx  container-scroll-animation.tsx  danger-button.tsx  danger-icon-button.tsx  dialog.tsx  dotted-glow-background.tsx  dropdown-menu.tsx  encrypted-text.tsx  floating-navbar.tsx  glowing-effect.tsx  highlight-icon-button.tsx  hover-border-gradient.tsx  icon-button.tsx  input.tsx  password-input.tsx  placeholders-and-vanish-input.tsx  primary-button.tsx  secondary-button.tsx  stateful-button.tsx  tooltip.tsx  (+1 more)
src/lib/: history-back.ts  i18n.ts  navigation.ts  platform.ts  utils.ts  view-transition.ts
src/locales/: de.ts  en.ts  es.ts  fr.ts  index.ts  it.ts  ja.ts  ko.ts  pt-br.ts  ru.ts  zh-hk.ts  zh-tw.ts  zh.ts
src/stores/: app.ts  locale.ts  theme-color.ts  theme.ts
