[package]
name = "mima"
version = "0.5.0"
description = "A modern, lightweight password manager"
authors = ["you"]
edition = "2021"

[lib]
name = "mima_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# TOTP
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# System keychain
keyring = "3"

# Biometric & idle (desktop only)
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-biometry = "0.2"
tauri-plugin-idlemonitor = "0.2"
